--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
-    background: blue;
-    font-size: 2em;
+    background: rgb(172, 172, 206);
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
